samples/_failures_safe/1761004772_a4e21e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3074d639.c: In function ‘main’:
./samples/SAFE/__tmp_3074d639.c:146:12: error: missing terminating " character
  146 |     printf("Successfully loaded
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3074d639.c:146:5: error: expected expression at end of input
  146 |     printf("Successfully loaded
      |     ^~~~~~
./samples/SAFE/__tmp_3074d639.c:146:5: error: expected declaration or statement at end of input
